--- a/src/pages/components/slider/Slider.scss
+++ b/src/pages/components/slider/Slider.scss
@@ -1,27 +1,35 @@
-@use "../../../index.scss";
+@use '../../../index.scss';
 
 .slider {
-	height: 150px;
-	border: red 1px solid;
-	position: relative;
-	transition: all 2s ease;
+    height: 150px;
+    border: red 1px solid;
+    position: relative;
+    transition: all 2s ease;
 
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-	.start-pos {
-		transform: translateX(400px);
-		position: absolute;
-	}
+	
+    .icon {
+		transition: all 1s ease;
+		
+        &.start-pos {
+            transform: translateX(400px);
+            opacity: 0;
+            position: absolute;
+        }
 
-	.active {
-		transform: translateX(0);
-		position: absolute;
-	}
+        &.active {
+            transform: translateX(0);
+            position: absolute;
+            opacity: 1;
+        }
 
-	.end-pos {
-		transform: translateX(-400px);
-		position: absolute;
-	}
+        &.end-pos {
+            transform: translateX(-400px);
+            position: absolute;
+            opacity: 0;
+        }
+    }
 }
