--- a/src/pages/components/slider/Slider.scss
+++ b/src/pages/components/slider/Slider.scss
@@ -1,35 +1,46 @@
-@use '../../../index.scss';
+@use "../../../index.scss";
 
 .slider {
-    height: 150px;
-    border: red 1px solid;
-    position: relative;
-    transition: all 2s ease;
+	height: 150px;
+    max-width: 100vw;
+	position: relative;
+	display:flex;
+	justify-content: center;
+	align-items: center;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	.icon {
+		transition: all 3s ease-in-out ;
 
-	
-    .icon {
-		transition: all 1s ease;
+		&.pos1 {
+			transform: translateX(-45vw) scale(0.5);
+			opacity: 0;
+			position: absolute;
+		}
+
+		&.pos2 {
+			transform: translateX(-30vw) scale(0.8);
+			opacity: 0.7;
+			position: absolute;
+		}
+
+		&.pos3 {
+            // box-shadow: 0 0 15px index.$text-color;
+			transform: translateX(0vw) scale(1.1);
+			position: absolute;
+			opacity: 1;
+		}
+
+		&.pos4 {
+			transform: translateX(30vw) scale(0.8);
+			position: absolute;
+			opacity: 0.7;
+		}
+		&.pos5 {
+            // transform: scale(0.5);
+			transform: translateX(45vw) scale(0.5);
+			position: absolute;
+			opacity: 0;
+		}
 		
-        &.start-pos {
-            transform: translateX(-400px);
-            opacity: 0;
-            position: absolute;
-        }
-
-        &.active {
-            transform: translateX(0);
-            position: absolute;
-            opacity: 1;
-        }
-
-        &.end-pos {
-            transform: translateX(400px);
-            position: absolute;
-            opacity: 0;
-        }
-    }
+	}
 }
