--- a/src/pages/Home/scss/About.scss
+++ b/src/pages/Home/scss/About.scss
@@ -1,7 +1,7 @@
 @use "../../../index.scss";
 
 .about {
-   margin: 15px;
+//    margin: 15px;
    padding: 25px;
 	min-height: 100vh;
 	background-color: black;
