--- a/src/pages/components/slider/Slider.scss
+++ b/src/pages/components/slider/Slider.scss
@@ -7,6 +7,7 @@
 	display:flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 
 	.icon {
 		transition: all 3s ease-in-out ;
