--- a/src/pages/Home/scss/About.scss
+++ b/src/pages/Home/scss/About.scss
@@ -1,17 +1,22 @@
-@use "../../../index.scss";
+@use '../../../index.scss';
 
 .about {
-//    margin: 15px;
-   padding: 25px;
-	min-height: 100vh;
-	background-color: black;
-	display: flex;
-	div {
-      padding: 0 10px;
-      background-color: index.$background-color;
-	}
+    padding: 25px;
+    min-height: 100vh;
+    background-color: black;
+    display: flex;
+    div {
+        padding: 0 10px;
+        background-color: index.$background-color;
+		
+		h1{
 
-	img {
-		height: 40vw;
-	}
+
+			font-size: 2rem;
+		}
+    }
+
+    img {
+        height: 40vw;
+    }
 }
