--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -49,6 +49,8 @@ header {
             padding: 0;
             transition: all 0.5s linear;
             overflow-x: hidden;
+            background-color: #012e40f2;
+            // background-color: transparent;
 
             &.open {
                 min-width: $sidebar-size;
@@ -65,6 +67,7 @@ header {
                 position: fixed;
                 right: 15px;
                 top: 20px;
+                cursor: pointer;
             }
         }
     }
