--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
-$background-color: #293241;
-$text-color: #dffbfc;
+// $background-color: #293241;
+$background-color: #012E40;
+$background-color-secondary: #141414;
 
-$first-color: #ee6b4d;
+$text-color: #F4E2DE;
+
+// $first-color: #ee6b4d;
+$first-color: #D94F04;
 $second-color: #3d5b81;
 $third-color: #9bc0d9;
 
