--- a/src/pages/Home/scss/About.scss
+++ b/src/pages/Home/scss/About.scss
@@ -3,7 +3,7 @@
 .about {
     padding: 25px;
     min-height: 100vh;
-    background-color: black;
+    background-color: index.$background-color-secondary;
     display: flex;
     div {
         padding: 0 10px;
