--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -26,6 +26,7 @@ header {
         }
 
         .link {
+            text-wrap: noWrap;
             padding: 20px 30px 0;
             text-decoration: none;
             font-size: 1.4rem;
