--- a/src/pages/Projects/scss/Cards.scss
+++ b/src/pages/Projects/scss/Cards.scss
@@ -1,12 +1,63 @@
-@use '../../../index.scss';
+@use "../../../index.scss";
 
 .cards-component {
-    border: red solid 1px;
-    height: 80vh;
-    width: 100%;
-    // overflow: hidden;
-    .cards-box {
-        .one-card {
-        }
-    }
+	overflow-x: hidden;
+	overflow-y: hidden;
+	padding: 0 0 0 25px;
+	width: fit-content;
+
+	// overflow: hidden;
+	.cards-box {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		max-width: fit-content;
+
+		.one-card {
+			margin: 10px;
+			padding: 0px;
+			width: 260px;
+			// border: red solid 1px;
+			box-shadow: 0 0 15px index.$third-color;
+			border-radius: 5px 45px;
+			overflow: hidden;
+			padding-bottom: 5px;
+			img {
+				width: inherit;
+			}
+
+			h3 {
+				padding: 5px 0;
+				margin: 10px 15px 5px;
+				text-align: center;
+				color: index.$first-color;
+				background-color: index.$background-color-secondary;
+				border-radius: 10px;
+			}
+
+			p {
+				margin: 5px 15px;
+			}
+			a {
+				margin: 10px;
+				display: flex;
+				justify-content: center;
+				justify-self: center;
+				padding: 5px 10px;
+				width: 80px;
+				border-radius: 10px;
+				cursor: pointer;
+				text-decoration: none;
+				border: none;
+				background-color: index.$background-color-secondary;
+				color: index.$text-color;
+				box-shadow: 0 0 10px;
+				transition: all linear 0.5s;
+
+				&:hover {
+					box-shadow: 0 0 20px;
+				}
+			}
+		}
+	}
 }
