--- a/src/pages/Projects/assets/snake/Snake.scss
+++ b/src/pages/Projects/assets/snake/Snake.scss
@@ -3,14 +3,14 @@
 	flex-direction: column;
 	align-items: center;
 	background: linear-gradient(45deg, white, black);
-	height: 120vh;
-	margin: 0 auto;
 
-	.snake h1 {
+	h1 {
 		font-size: 60px;
+        margin: 0;
 	}
 
 	.border {
+        margin: 50px;
 		box-sizing: content-box;
 		background-color: black;
 		padding: 3px;
