--- a/src/pages/Projects/scss/Cards.scss
+++ b/src/pages/Projects/scss/Cards.scss
@@ -22,6 +22,11 @@
 			border-radius: 5px 45px;
 			overflow: hidden;
 			padding-bottom: 5px;
+
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+
 			img {
 				width: inherit;
 			}
@@ -40,9 +45,9 @@
 			}
 			a {
 				margin: 10px;
-				display: flex;
-				justify-content: center;
-				justify-self: center;
+				// display: flex;
+				// justify-content: center;
+				// justify-self: center;
 				padding: 5px 10px;
 				width: 80px;
 				border-radius: 10px;
