--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 // $background-color: #293241;
 $background-color: #012E40;
 $background-color-secondary: #141414;
+$background-gradient:linear-gradient( 135deg, black, #141414, #012E40 );
+
+
 
 $text-color: #F4E2DE;
 
@@ -16,6 +19,7 @@ $third-color: #9bc0d9;
 :root {
 	padding: 0;
 	margin: 0;
+
 
 	background-color: $background-color;
 	color: $text-color;
