--- a/src/pages/Home/About.scss
+++ b/src/pages/Home/About.scss
@@ -1,17 +1,27 @@
 @use "../../index.scss";
 
 .about {
+	width: 86vw;
+	// overflow-x: hidden;
+
+	@media (max-width: 1000px) {
+		width: 100vw;
+	}
+
 	.first-block {
 		padding: 15px 15px 15px 50px;
 		box-sizing: border-box;
 		// height: 100vh;
 
-		background: linear-gradient(135deg, black, #141414, #012E40);
+		background: linear-gradient(115deg, black, #141414, #012e40);
 
 		.box {
 			display: flex;
 			flex-wrap: wrap;
 			margin: 20px;
+
+			// border: 1px solid red;
+			background-color: #141414;
 
 			align-items: center;
 			.nadpis {
@@ -22,20 +32,26 @@
 				overflow: hidden;
 
 				border: index.$background-color 1px solid;
+				
 				h1 {
 					font-size: 3rem;
+					transform: translateX(600px);
 					opacity: 0;
-					animation: opacityIn 1s forwards;
+					animation: fadeIn 0.3s forwards ease-in-out, opacityIn 2s forwards;
 				}
 
-				p {
+				.text1 {
 					font-size: 1.5rem;
 					transform: translateX(600px);
 					opacity: 0;
 					animation: fadeIn 1s forwards ease-in-out, opacityIn 2s forwards;
+				}
 
-					// max-width: 100%;
-					// overflow-wrap: break-word;
+				.text2 {
+					font-size: 1.5rem;
+					transform: translateX(600px);
+					opacity: 0;
+					animation: fadeIn 1.5s forwards ease-in-out, opacityIn 2s forwards;
 				}
 
 				.react-icon {
@@ -58,10 +74,8 @@
 				z-index: 5;
 			}
 		}
-
 	}
-	
-	
+
 	@keyframes fadeIn {
 		to {
 			transform: translateX(0px);
@@ -84,11 +98,8 @@
 	}
 
 	.second-block {
-
-
-
 		min-height: 100vh;
-		background: linear-gradient(45deg, black, #141414, #012E40);
+		background: linear-gradient(65deg, black, #141414, #012e40);
 
 		p {
 			font-size: 1.5rem;
@@ -111,7 +122,7 @@
 
 	.third-block {
 		min-height: 100vh;
-		background: linear-gradient(135deg, black, #141414, #012E40);
+		background: linear-gradient(115deg, black, #141414, #012e40);
 
 		img {
 			width: 550px;
@@ -121,14 +132,16 @@
 			// background-color: red;
 		}
 
-		p{margin: 0;}
+		p {
+			margin: 0;
+		}
 	}
 
 	.fourth-block {
 		min-height: 100vh;
-		background: linear-gradient(45deg, black, #141414, #012E40);
+		background: linear-gradient(65deg, black, #141414, #012e40);
 
-		h1{
+		h1 {
 			margin: 0;
 		}
 	}
