--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 // $background-color: #293241;
-$background-color: #012E40;
+$background-color: #002333;
 $background-color-secondary: #141414;
 $background-gradient:linear-gradient( 135deg, black, #141414, #012E40 );
 
@@ -19,11 +19,20 @@ $third-color: #9bc0d9;
 :root {
 	padding: 0;
 	margin: 0;
-
-
-	background-color: $background-color;
+	width: 100vw;
+	height: 100vh;
+	
+	
+	// background-color: $background-color;
+	background: linear-gradient(135deg, black, #141414, #012e40);
+	background-attachment:fixed;
+	overflow-x: hidden;
 	color: $text-color;
+	
 
-	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: cursive;
+
 	font-weight: 400;
+	font-size: 15px;
 }
