front page update

--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -1,5 +1,6 @@
 @use "../../index.scss";
 
+
 .about {
 	box-sizing: border-box;
 	width: 86vw;
@@ -8,17 +9,28 @@
 	// font-style: italic;
 	font-size: 1.5rem;
 
+	// .wave {
+	// 	position: absolute;
+	// 	// width: 100vw;
+	// 	// background-attachment: fixed;
+
+	// 	// height: 100vh;
+	// 	background: transparent;
+	// 	top: 0px;
+	// 	right: 50px;
+	// 	z-index: -1;
+	// }
 	.first-block {
 		// padding: 15px 15px 15px 50px;
 		box-sizing: border-box;
-			
+
 		.box {
 			display: flex;
 			flex-wrap: wrap;
 			margin: 20px;
 			align-items: center;
-			background-color: rgba($color: index.$background-color, $alpha: 0.8);
-			
+			// background-color: rgba($color: index.$background-color, $alpha: 0.8);
+
 			.nadpis {
 				min-width: 200px;
 				margin: 20px;
@@ -26,43 +38,44 @@
 				flex: 1;
 				text-align: center;
 				overflow: hidden;
-				
-				border: index.$background-color-secondary 5px solid;
-				
+
 				h1 {
-					color: index.$second-color;
+					@include index.coloredFont;
+					// background: linear-gradient(45deg, red, index.$second-color);
+					// background-clip: text;
+					// -webkit-text-fill-color: transparent;
+
 					font-size: 3rem;
 					transform: translateX(600px);
-					// opacity: 0;
 					animation: fadeIn 0.3s forwards ease-in-out;
 				}
-				
+
 				.text1 {
 					font-size: 2.5rem;
 					transform: translateX(600px);
 					opacity: 0;
 					animation: fadeIn 1s forwards ease-in-out, opacityIn 2s forwards;
 				}
-				
+
 				.text2 {
 					transform: translateX(600px);
 					opacity: 0;
 					animation: fadeIn 1.5s forwards ease-in-out, opacityIn 2s forwards;
 				}
-				
+
 				.react-icon {
 					margin: 25px;
-					
+
 					&.react {
 						animation: rotate 20s forwards infinite linear;
 					}
 				}
 			}
-			
+
 			img.me {
 				width: 38vw;
 				height: 38vw;
-				
+
 				min-width: 300px;
 				min-height: 300px;
 				margin-top: 15px;
@@ -70,7 +83,6 @@
 			}
 		}
 	}
-	
 
 	@media (max-width: 1000px) {
 		width: 100vw;
@@ -79,14 +91,12 @@
 		}
 	}
 
-
-
 	@keyframes fadeIn {
 		to {
 			transform: translateX(0px);
 		}
 	}
-	
+
 	@keyframes opacityIn {
 		to {
 			opacity: 1;
