--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -13,9 +13,20 @@
 
 	.fourth-block {
 		display: flex;
+		flex-direction: column;
+		align-items: center;
 		justify-content: center;
 		margin: 20px;
 		margin-bottom: 100px;
+
+		h2 {
+			@include index.coloredFont;
+			font-size: 3rem;
+		}
+
+		p {
+			width: 800px;
+		}
 	}
 
 	.fifth-block {
@@ -53,4 +64,3 @@
 		}
 	}
 }
-
