--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,19 @@
-// $background-color: #293241;
 $background-color: #002333;
 $background-color-secondary: #141414;
 $background-gradient: linear-gradient(135deg, black, #141414, #012e40);
 
 $text-color: #f4e2de;
-// $text-color: #000000;
 
-// $first-color: #ee6b4d;
 $first-color: #d94f04;
 $second-color: #3d5b81;
 $third-color: #9bc0d9;
+
+@mixin coloredFont {
+	background: linear-gradient(to right, red , $second-color);
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
 
 .main-body {
 	margin: 0;
@@ -29,7 +33,7 @@ $third-color: #9bc0d9;
 
 	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 	// font-family: cursive;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 
 	font-weight: 400;
 	font-size: 14px;
