--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -25,7 +25,7 @@
 		}
 
 		p {
-			width: 800px;
+			max-width: 800px;
 		}
 	}
 
@@ -48,6 +48,7 @@
 			aspect-ratio: 5/3;
 			height: 400px;
 			width: auto;
+			margin-top: 70px;
 			// border: red 1px solid;
 			position: relative;
 			flex-shrink: 0;
@@ -63,4 +64,20 @@
 			}
 		}
 	}
+
+
+	.sixth-block {
+	
+		margin: 20px;
+		padding: 20px;
+		
+
+		p {
+			padding: 20px;
+			max-width: 800px;
+		}
+	}
+
+
+
 }
