--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -9,7 +9,9 @@
 
 
 	.first-block {
+		display: flex;
 		box-sizing: border-box;
+		height: max-content;
 
 		.box {
 			display: flex;
@@ -66,8 +68,11 @@
 		}
 	}
 
-	@media (max-width: 1000px) {
+	@media (max-width: index.$screen-size) {
 		width: 100vw;
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
 		.first-block {
 			padding: 15px;
 		}
