--- a/src/pages/components/slider/Slider.scss
+++ b/src/pages/components/slider/Slider.scss
@@ -2,7 +2,7 @@
 
 .slider {
 	height: 150px;
-    max-width: 100vw;
+    width: 100%;
 	position: relative;
 	display:flex;
 	justify-content: center;
@@ -13,32 +13,32 @@
 		transition: all 4s linear ;
 
 		&.pos1 {
-			transform: translateX(-45vw) scale(0.5);
+			transform: translateX(-450%) scale(0.5);
 			opacity: 0;
 			position: absolute;
 		}
 
 		&.pos2 {
-			transform: translateX(-30vw) scale(0.8);
+			transform: translateX(-300%) scale(0.8);
 			opacity: 0.7;
 			position: absolute;
 		}
 
 		&.pos3 {
             // box-shadow: 0 0 15px index.$text-color;
-			transform: translateX(0vw) scale(1.2);
+			transform: translateX(0) scale(1.2);
 			position: absolute;
 			opacity: 1;
 		}
 
 		&.pos4 {
-			transform: translateX(30vw) scale(0.8);
+			transform: translateX(300%) scale(0.8);
 			position: absolute;
 			opacity: 0.7;
 		}
 		&.pos5 {
             // transform: scale(0.5);
-			transform: translateX(45vw) scale(0.5);
+			transform: translateX(450%) scale(0.5);
 			position: absolute;
 			opacity: 0;
 		}
