--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -1,14 +1,14 @@
 @use "../../../index.scss";
 
-$sidebar-size: 13vw;
+$sidebar-size: 20%;
 
 header {
 	box-sizing: border-box;
-	min-width: $sidebar-size;
+	width: $sidebar-size;
 	height: 100vh;
 	.sidebar {
 		box-sizing: border-box;
-		min-width: $sidebar-size;
+		width: $sidebar-size;
 		height: 100vh;
 		display: flex;
 		flex-direction: column;
@@ -93,8 +93,8 @@ header {
 				border: none;
 				display: block;
 				position: fixed;
-				right: 15px;
-				top: 20px;
+				right: 30px;
+				top: 10px;
 				cursor: pointer;
 			}
 		}
