--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ $second-color: #3d5b81;
 $third-color: #9bc0d9;
 
 $screen-size: 1000px;
+$font-size: 1.5rem;
 
 @mixin coloredFont {
 	background: linear-gradient(to right, red , $second-color);
