--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -3,7 +3,7 @@
 .about {
 	box-sizing: border-box;
 	width: 100%;
-	font-size: 1.5rem;
+	font-size: index.$font-size;
 	overflow: hidden;
 
 	.first-block {
