--- a/src/index.scss
+++ b/src/index.scss
@@ -20,13 +20,15 @@ $font-size: 1.5rem;
 
 .main-body {
 	margin: 0;
+	max-width: 100vw;
+	width: 100vw;
+
 }
 
 :root {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	width: 100vw;
 	height: 100vh;
 
 	background: linear-gradient(60deg, black, #141414, #012e40);
