--- a/src/pages/Projects/assets/snake/Snake.scss
+++ b/src/pages/Projects/assets/snake/Snake.scss
@@ -1,7 +1,10 @@
 .snake {
+	width: 840px;
+	margin-top: 50px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-self: center;
 	background: linear-gradient(45deg, white, black);
 
 	h1 {
