--- a/src/pages/scss/OneProject.scss
+++ b/src/pages/scss/OneProject.scss
@@ -6,6 +6,6 @@
    min-height: 100vh;
    padding: 20px 0;
 
-   display: grid;
-   place-items: center;
+   // display: grid;
+   // place-items: center;
 }
