faq project add - chyba open

--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -29,7 +29,7 @@
             padding: 0px;
             width: 260px;
             height: 330px;
-            // box-shadow: 0 0 15px index.$third-color;
+            box-shadow: 0 0 15px index.$third-color;
             overflow: hidden;
             padding-bottom: 5px;
             background-color: index.$second-color;
